# impak-app

./: .gitignore  README.md
impak-decoder/: README.md  build.bat  pyproject.toml
impak-decoder/src/impakdecoder/: __init__.py  decoder.py  differ.py  formats.py
impak-viewer/: build_msw.bat  viewer.py
impak-viewer-android/: .gitignore  settings.gradle.kts
impak-viewer-android/app/: build.gradle.kts
impak-viewer-android/app/src/androidTest/java/dev/setsuna/impakviewer/: ExampleInstrumentedTest.kt
impak-viewer-android/app/src/main/: AndroidManifest.xml
impak-viewer-android/app/src/main/java/dev/setsuna/impakviewer/: MainActivity.kt
impak-viewer-android/app/src/main/java/dev/setsuna/impakviewer/decoder/: ImpakFormats.kt  ImpakReader.kt
impak-viewer-android/app/src/main/java/dev/setsuna/impakviewer/model/: ViewerViewModel.kt
impak-viewer-android/app/src/main/java/dev/setsuna/impakviewer/ui/components/: InfoPanel.kt  ThumbnailStrip.kt  ZoomableImage.kt
impak-viewer-android/app/src/main/java/dev/setsuna/impakviewer/ui/screens/: MainScreen.kt
impak-viewer-android/app/src/main/java/dev/setsuna/impakviewer/ui/theme/: Color.kt  Theme.kt  Type.kt
impak-viewer-android/app/src/main/res/values/: strings.xml  themes.xml
impak-viewer-android/app/src/test/java/dev/setsuna/impakviewer/: ExampleUnitTest.kt
impak-viewer-android/gradle/: libs.versions.toml
impak-viewer-android/gradle/wrapper/: gradle-wrapper.properties
impak-viewer/model/: thumbnail.py
impak-viewer/util/: colors.py  image.py
impak-viewer/view/: image_view.py  thumb_item.py
